fix: return last improvement from exercise detail
