# api/Robic.Repository/Models/ExerciseDefinition.cs
@@ -6,4 +6,5 @@ public class ExerciseDefinition
     public required string Title { get; set; }
     public required string Unit { get; set; }
     public required int UserId { get; set; }
+    public double? LastImprovement { get; set; }
 }
